tests/should_fail/builtin_with_contract.stderr
error: cannot specify both `creusot::builtin` and a contract on the same definition
 --> builtin_with_contract.rs:7:1
  |
7 | pub fn builtin_with_contract() {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

